--- a/index.html
+++ b/index.html
@@ -23,45 +23,64 @@
   <!-- hero image -->
 	<div id="hero">
 		<h1>Hi, I'm Imani.</h1>
-		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying user experiences.</p>
+		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for buil
+      ding satisfying user experiences.</p>
     <a href="" target="_blank" class="button">About me</a>
-    <a href="" target="_blank" class="button">My work</a>
+    <a href="" target="_blank" class="button">My work</a><br>
+    <i class="fas fa-angle-double-down"></i>
   </div>
   <!-- main content -->
   	<div id="main">
       <section class="capstone_project">
           <h3>Capstone Project</h3>
           <p>This is a summary of my capstone project.</p>
-          <img src="" alt="capstone project photo">
           <a href="" target="_blank" class="button">Case study</a>
+          <img src="../images/iphone1.png" alt="capstone project mockup photo" width="370" height="370">
       </section>
       <section class="trove_project">
           <h3>Trove Project</h3>
           <p>This is the cloud storage project I created.</p>
-          <img src="" alt="trove project photo">
           <a href="/project.html" target="_blank" class="button">Case study</a>
+            <img src="../images/iphone2.png" alt="trove mockup photo" width="370" height="370">
       </section>
       <section class="blocjams_project">
           <h3>Bloc Jams Project</h3>
           <p>This is the music player application I created.</p>
-          <img src="" alt="bloc jams photo">
           <a href="" target="_blank" class="button">Case study</a>
+          <img src="../images/iphone3.png" alt="bloc jams project mockup photo" width="370" height="370">
       </section>
       <section class="busybus_project">
           <h3>Busy Bus Project</h3>
           <p>This is the transportation application I created.</p>
-          <img src="" alt="busy bus project photo">
           <a href="" target="_blank" class="button">Case study</a>
+          <img src="../images/iphone4.png" alt="busybus mockup photo" width="370" height="370">
       </section>
       <section class="design_process">
           <h3>My Design Process</h3>
-          <img src="" alt="design process illustration">
+          <img src="../images/designblock.svg" alt="design process image" width="920" height="68">
       </section>
       <section class="testimonials">
           <h3>Testimonials</h3>
-          <i class="fas fa-quote-left"></i>
-          <p>Asdgajsd ajshdg aajshdg jhasgd asdjh aasd gjhasdg jgsd jhasgd jasgdjhag.<br>-djhasgdjhags</p>
-          <i class="fas fa-quote-right"></i>
+          <!-- Slideshow container -->
+          <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+              <img src="../images/floatingtext.png" alt="quotation" width="490" height="300">
+            </div>
+            <div class="mySlides fade">
+              <p></p>
+            </div>
+            <div class="mySlides fade">
+              <p></p>
+            </div>
+
+          <!-- The dots/circles -->
+          <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
       </section>
   </div>
  <!-- connect with me -->
@@ -70,9 +89,9 @@
     <p>Thanks for stopping by.<br>Please reach out if you want to chat or have any questions!</p>
     <a href="" target="_blank" class="button">Message me</a>
      </section>
-  <!-- footer -->
-  <div id="footer">
-    <!-- social links -->
+     <!-- footer -->
+   <div id="footer">
+     <!-- social links -->
     <ul class="socialmedia">
       <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
       <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
