--- a/project.html
+++ b/project.html
@@ -23,6 +23,7 @@
     <!-- start case study -->
     <h1>Trove</h1>
     <p>Trove is a cloud storage application that combines storage and organization with real-time collaboration.<p>
+    <img src="../images/troveblue.png" alt="trove mockup image" width="370" height="370">
     <a href="" target="_blank" class="button">View finished prototype</a>
   </div>
     <!-- summary and solution-->
@@ -36,55 +37,61 @@
      </section>
     <section>
       <h2>The Solution:</h2>
-      <img src="" alt="trove mockup"></img>
+      <img src="../images/trovemockup.png" alt="trove mockup" width="575" height="475"></img>
     </section>
     <!-- discovery -->
     <section>
       <h2>Discovery Phase:</h2>
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them, and the features they would most like to see in future applications.</p>
-        <img src="" alt="user survey image"></img>
         <a href="" target="_blank" class="button">View more</a>
+        <img src="" alt="user survey image" width="575" height="475"></img>
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
         <p>Google Drive: Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,  and presentations. They also provide several tools for users to edit content with.
         <br>Dropbox: Dropbox is available on multiple platforms, IOS, Android, and Office 365 applications. The application also has the option of administration control for business users.<br>Pinterest: Pinterest allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless scrolling of interests the user choses. </p>
-          <img src="" alt="google drive image"></img><br>
-          <img src="" alt="dropbox image"></img><br>
-          <img src="" alt="pinterest image"></img><br>
+          <img src="../images/googledrivre.png" alt="google drive image" width="1050" height="500"></img><br>
+          <img src="../images/dropbox.png" alt="dropbox image" width="1050" height="500"></img><br>
+          <img src="../images/pinterest.png" alt="pinterest image" width="1055" height="500"></img><br>
      </section>
     <section>
       <h2>User Personas:</h2>
-        <img src="" alt="user persona image"></img>
+        <img src="../images/googledrive.png" alt="user persona image"></img>
         <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
-        <img src="" alt="user persona image"></img>
+        <img src="../images/googledrive.png" alt="user persona image"></img>
         <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
        </section>
     <!-- info architecture -->
     <section>
       <h2>Information Architecture:</h2>
-        <img src="" alt="user flows image"></img>
-        <img src="" alt="user flows image"></img>
-        <img src="" alt="user flows image"></img>
+      <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses, the competitive analysis and the user personas.
+        I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
+      <img src="../images/userstories.png" alt="user stories image" width="508" height="335"></img>
+     </section>
+    <section>
+      <h2>User Flows:</h2>
+        <img src="../images/userflow1.png" alt="user flows image" width="200" height="343"></img>
+        <img src="../images/userflow2.png" alt="user flows image" width="188" height="335"></img>
+        <img src="../images/userflow3.png" alt="user flows image" width="233" height="343"></img>
       </section>
     <section>
       <h2>Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to mockup what I would like my final application to look like. </p>
-      <img src="" alt="wireframe image"></img>
-      <img src="" alt="wireframe image"></img>
-      <img src="" alt="wireframe image"></img>
+      <img src="../images/wireframe1.png" alt="wireframe image" width="300" height="221"></img>
+      <img src="../images/wireframe2.png" alt="wireframe image" width="333" height="221"></img>
+      <img src="../images/wireframe3.png" alt="wireframe image" width="310" height="221"></img><br>
       <a href="" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. We started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="" alt="trove sketches"></img>
+      <img src="../trovesketch.png" alt="trove sketches" width="250" height="303"></img>
       <p>Once I knew I wanted to go in a treasure chest/nautical theme, I started to gather inspiration from around the web. Colors that are featured in the mood board (brown, orange, gold, blue
          and teal) were the foundational pieces for the finished app.</p>
-      <img src="" alt="trove moodboard"></img>
-      <img src="" alt="trove moodboard"></img>
+      <img src="../images/moodboard1.png" alt="trove moodboard" width="412" height="350"></img>
+      <img src="../images/moodboard2.png" alt="trove moodboard" width="412" height="350"></img>
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -95,9 +102,9 @@
     <section>
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="" alt="mockup image"></img>
-      <img src="" alt="mockup image"></img>
-      <img src="" alt="mockup image"></img>
+      <img src="../images/mockup1.png" alt="mockup image" width="300" height="213"></img>
+      <img src="../images/mockup2.png" alt="mockup image" width="300" height="213"></img>
+      <img src="../images/mockup3.png" alt="mockup image" width="300" height="213"></img><br>
       <a href="" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -107,7 +114,7 @@
     <section>
       <h2>Preference Tests:</h2>
       <p>I conducted a preference test for three different elements in my design.83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
-      <img src="" alt="preference graph"></img>
+      <img src="../images/surveygraph.png" alt="preference graph" width="248" height="248"></img>
     <!-- final project -->
     <section>
       <h2>Conclusion:</h2>
