--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
+
+<!--  Meta  -->
+<meta charset="UTF-8" />
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
 <link rel="stylesheet" href="styles/main.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
-  <!-- header -->
+
+<!-- header -->
   <div id="header">
     <img id="logo" src="" alt="imani ricks logo"></img>
-  <!-- nav bar -->
+<!-- nav bar -->
       <ul class="navigation">
         <li><a href="">Work</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Contact</a></li>
       </ul>
   </div>
-  <!-- hero image -->
+<!-- hero image -->
 	<div id="hero">
 		<h1>Hi, I'm Imani.</h1>
 		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for buil
@@ -60,46 +65,44 @@
           <img src="../images/designblock.svg" alt="design process image" width="920" height="68">
       </section>
       <section class="testimonials">
-          <h3>Testimonials</h3>
-          <!-- Slideshow container -->
+        <h3>Testimonials</h3>
+<!-- Slideshow container -->
           <div class="slideshow-container">
-
-            <!-- Full-width images with number and caption text -->
+<!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
               <img src="../images/floatingtext.png" alt="quotation" width="490" height="300">
-            </div>
+              </div>
+            <div class="mySlides fade">
+              <p></p>
+             </div>
             <div class="mySlides fade">
               <p></p>
             </div>
-            <div class="mySlides fade">
-              <p></p>
-            </div>
-
-          <!-- The dots/circles -->
+<!-- The dots/circles -->
           <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
-      </section>
-  </div>
+        </section>
+      </div>
  <!-- connect with me -->
   <section>
     <h3>Connect with me:</h3>
     <p>Thanks for stopping by.<br>Please reach out if you want to chat or have any questions!</p>
     <a href="" target="_blank" class="button">Message me</a>
      </section>
-     <!-- footer -->
+ <!-- footer -->
    <div id="footer">
-     <!-- social links -->
-    <ul class="socialmedia">
-      <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-      <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
-      <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-      <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
-    </ul>
-  </div>
-</body>
+ <!-- social links -->
+      <ul class="socialmedia">
+        <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
+      </ul>
+    </div>
 
+</body>
 
 </html>
