--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8" />
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="style.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 
@@ -17,22 +17,21 @@
 
 <!-- header -->
   <div id="header">
-    <img id="logo" src="" alt="imani ricks logo"></img>
+    <img id="logo" src="../images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50">
 <!-- nav bar -->
-      <ul class="navigation">
-        <li><a href="">Work</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+      <ul class="navbar">
+        <li><a href="_blank">Work</a></li>
+        <li><a href="/about-me.html">About</a></li>
+        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
       </ul>
   </div>
 <!-- hero image -->
 	<div id="hero">
 		<h1>Hi, I'm Imani.</h1>
-		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for buil
-      ding satisfying user experiences.</p>
+		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying user experiences.</p>
     <a href="" target="_blank" class="button">About me</a>
     <a href="" target="_blank" class="button">My work</a><br>
-    <i class="fas fa-angle-double-down"></i>
+    <i class="fas fa-angle-double-down fa-3x"></i>
   </div>
   <!-- main content -->
   	<div id="main">
@@ -84,25 +83,25 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
  <!-- connect with me -->
-  <section>
-    <h3>Connect with me:</h3>
-    <p>Thanks for stopping by.<br>Please reach out if you want to chat or have any questions!</p>
-    <a href="" target="_blank" class="button">Message me</a>
+     <section>
+      <h3>Connect with me:</h3>
+      <p>Thanks for stopping by.<br>Please reach out if you want to chat or have any questions!</p>
+      <a href="" target="_blank" class="button">Message me</a>
      </section>
  <!-- footer -->
    <div id="footer">
  <!-- social links -->
-      <ul class="socialmedia">
-        <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-        <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
-      </ul>
-    </div>
-
+    <ul class="socialmedia">
+      <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+      <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
+    </ul>
+   </div>
+ </div>
 </body>
 
 </html>
