index.html update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
-      </section>
+      </div>
+   </section>
  <!-- connect with me -->
      <section class="connect">
       <h3>Connect with me:</h3>
