--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
 <title>Trove Case Study</title>
 <!-- stylesheet -->
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="project.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 </head>
