--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <i class="fas fa-angle-double-down fa-3x"></i>
   </section>
 
+  <div class="main">
   <!-- main content -->
       <aside class="cap">
         <img src="images/iphone1.png" alt="capstone project mockup photo" width="370" height="370">
@@ -68,40 +69,48 @@
         </aside>
       <section class="design_process">
           <h3>My Design Process</h3>
-          <img src="images/designblock.svg" alt="design process image" width="920" height="68">
+          <img class="design" src="images/designblock.svg" alt="design process image" width="600" height="68">
       </section>
-
-
-<div class="slider">
-  <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
-  <input type="radio" name="slider" title="slide2" class="slider__nav"/>
-  <input type="radio" name="slider" title="slide3" class="slider__nav"/>
-  <input type="radio" name="slider" title="slide4" class="slider__nav"/>
-  <div class="slider__inner">
-    <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
-      <h2 class="slider__caption">codepen</h2>
-      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-    </div>
-    <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
-      <h2 class="slider__caption">newspaper-o</h2>
-      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-    </div>
-    <div class="slider__contents"><i class="slider__image fa fa-television"></i>
-      <h2 class="slider__caption">television</h2>
-      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-    </div>
-    <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
-      <h2 class="slider__caption">diamond</h2>
-      <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
-    </div>
-  </div>
-</div>
-
-
-
+      <!-- testimonials -->
+      <div class="slider">
+        <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide2" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide3" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide4" class="slider__nav"/>
+        <div class="slider__inner">
+          <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
+            <h2 class="slider__caption">codepen</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
+            <h2 class="slider__caption">newspaper-o</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-television"></i>
+            <h2 class="slider__caption">television</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
+            <h2 class="slider__caption">diamond</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+        </div>
+      </div>
  <!-- connect with me -->
      <section class="connect">
       <h3>Connect with me:</h3>
       <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
       <a href="" target="_blank" class="button">Message me</a>
     </section>
+    <!-- footer -->
+      <footer>
+        <ul class="socialmedia">
+         <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a></li>
+         <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+         <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
+        </ul>
+      </footer>
+    </body>
+
+    </html>
