--- a/project.html
+++ b/project.html
@@ -129,20 +129,14 @@
       <a href="" target="_blank" class="button">Message me</a>
        </section>
     <!-- footer -->
-    <div id="footer">
-      <!-- social links -->
+    <footer>
       <ul class="socialmedia">
-        <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-        <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
+       <li><a href="mailto:ricksimaniruby@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a></li>
+       <li><a href="https://github.com/IRRicks" target="_blank"><i class="fab fa-github-square fa-2x"></i></a></li>
+       <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
+       <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
       </ul>
-    </div>
+    </footer>
+  </body>
 
-  </div>
-</body>
-
-
-
-
-</html>
+  </html>
