--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a href="/about-me.html">About</a></li>
-        <li><a href="_blank.html">Work</a></li>
+        <li><a href="#capstone_project">Work</a></li>
       </ul>
    </nav>
 
@@ -28,8 +28,8 @@
 	<section class="hero">
 		<h1>Hi, I'm Imani.</h1>
 		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</p>
-    <a href="" target="_blank" class="button">About me</a>
-    <a href="" target="_blank" class="button">My work</a><br>
+    <a href="about-me.html" class="button">About me</a>
+    <a href="#main" class="button">My work</a><br>
     <i class="fas fa-angle-double-down fa-3x"></i>
   </section>
 
@@ -96,11 +96,12 @@
           </div>
         </div>
       </div>
+  </div>
  <!-- connect with me -->
      <section class="connect">
       <h3>Connect with me:</h3>
       <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
-      <a href="" target="_blank" class="button">Message me</a>
+      <a href="/contact.html" class="button">Message me</a>
     </section>
     <!-- footer -->
       <footer>
