--- a/project.html
+++ b/project.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>Trove Case Study</title>
+<!--  Meta  -->
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
+<link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="project.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- header -->
-  <div id="header">
-    <img id="logo" src="../images/dotlogo2.svg" alt="imani ricks logo">
-  <!-- nav bar -->
-      <ul class="navbar">
-        <li><a href="">Work</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+
+  <nav class="navbar">
+<!-- nav bar -->
+      <ul class="main-navbar">
+        <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
+        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
+        <li><a href="/about-me.html">About</a></li>
+        <li><a href="index.html">Work</a></li>
       </ul>
-  </div>
-  <div id="hero">
+   </nav>
+
+  <section class="hero">
     <!-- start case study -->
     <h1>Trove</h1>
-    <p>Trove is a cloud storage application that combines storage and organization with real-time collaboration.<p>
-    <img src="../images/troveblue.png" alt="trove mockup image" width="370" height="370">
+    <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
+    <img class="hero" src="images/troveblue.png" alt="trove mockup image" width="370" height="370">
     <a href="" target="_blank" class="button">View finished prototype</a>
-  </div>
+  </section>
     <!-- summary and solution-->
-  <div id="main">
-    <section>
+  <div class="main">
+    <section class="summary">
       <h2>Summary:</h2>
       <p>In the ever-expanding cloud storage marketplace, something was missing. Users wanted the ability to collaborate with each other in real-time on projects. My goal was to take some of the best aspects of current cloud storage
       and organization applications and inject them with a sense of social networking.</p>
+      </section>
+    <section class="problem">
       <h2>Presenting Problem:</h2>
       <p>The client wanted to enter the cloud application market with an application that also provided user collaboration features. </p>
      </section>
-    <section>
+    <section class="solution">
       <h2>The Solution:</h2>
-      <img src="../images/trovemockup.png" alt="trove mockup" width="575" height="475">
+      <img src="images/trovemockup.png" alt="trove mockup" width="575" height="475">
     </section>
     <!-- discovery -->
-    <section>
+    <section class="discovery">
       <h2>Discovery Phase:</h2>
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them, and the features they would most like to see in future applications.</p>
         <a href="" target="_blank" class="button">View more</a>
-        <img src="../images/trovesurvey.png" alt="user survey image" width="575" height="475">
+        <aside>
+        <img class="survey" src="images/trovesurvey.png" alt="user survey image" width="510" height="200">
+        </aside>
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-        <p>Google Drive: Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,  and presentations. They also provide several tools for users to edit content with.
-        <br>Dropbox: Dropbox is available on multiple platforms, IOS, Android, and Office 365 applications. The application also has the option of administration control for business users.<br>Pinterest: Pinterest allows users to “Pin”
+        <p>Google Drive:<br> Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,  and presentations. They also provide several tools for users to edit content with.
+        <br>Dropbox:<br> Dropbox is available on multiple platforms, IOS, Android, and Office 365 applications. The application also has the option of administration control for business users.<br>Pinterest:<br> Pinterest allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless scrolling of interests the user choses. </p>
-          <img src="../images/googledrivre.png" alt="google drive image" width="1050" height="500"><br>
-          <img src="../images/dropbox.png" alt="dropbox image" width="1050" height="500"><br>
-          <img src="../images/pinterest.png" alt="pinterest image" width="1055" height="500"><br>
+          <img src="images/googledrivre.png" alt="google drive image" width="1050" height="500"><br>
+          <img src="images/dropbox.png" alt="dropbox image" width="1050" height="500"><br>
+          <img src="images/pinterest.png" alt="pinterest image" width="1055" height="500"><br>
      </section>
     <section>
       <h2>User Personas:</h2>
-        <img src="../images/googledrive.png" alt="user persona image">
+        <img src="images/user1.png" alt="user persona image">
         <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
-        <img src="../images/googledrive.png" alt="user persona image">
+        <img src="images/user2.png" alt="user persona image">
         <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
        </section>
     <!-- info architecture -->
@@ -67,31 +76,31 @@
       <h2>Information Architecture:</h2>
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses, the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
-      <img src="../images/userstories.png" alt="user stories image" width="508" height="335">
+      <img src="images/userstories.png" alt="user stories image" width="508" height="335">
      </section>
     <section>
       <h2>User Flows:</h2>
-        <img src="../images/userflow1.png" alt="user flows image" width="200" height="343">
-        <img src="../images/userflow2.png" alt="user flows image" width="188" height="335">
-        <img src="../images/userflow3.png" alt="user flows image" width="233" height="343">
+        <img src="images/userflow1.png" alt="user flows image" width="200" height="343">
+        <img src="images/userflow2.png" alt="user flows image" width="188" height="335">
+        <img src="images/userflow3.png" alt="user flows image" width="233" height="343">
       </section>
-    <section>
+    <section class="wireframes">
       <h2>Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to mockup what I would like my final application to look like. </p>
-      <img src="../images/wireframe1.png" alt="wireframe image" width="300" height="221">
-      <img src="../images/wireframe2.png" alt="wireframe image" width="333" height="221">
-      <img src="../images/wireframe3.png" alt="wireframe image" width="310" height="221"><br>
+      <img src="images/wireframe1.png" alt="wireframe image" width="300" height="221">
+      <img src="images/wireframe2.png" alt="wireframe image" width="333" height="221">
+      <img src="images/wireframe3.png" alt="wireframe image" width="310" height="221"><br>
       <a href="" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. We started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="../trovesketch.png" alt="trove sketches" width="250" height="303">
+      <img src="images/trovesketch.png" alt="trove sketches" width="250" height="303">
       <p>Once I knew I wanted to go in a treasure chest/nautical theme, I started to gather inspiration from around the web. Colors that are featured in the mood board (brown, orange, gold, blue
          and teal) were the foundational pieces for the finished app.</p>
-      <img src="../images/moodboard1.png" alt="trove moodboard" width="412" height="350">
-      <img src="../images/moodboard2.png" alt="trove moodboard" width="412" height="350">
+      <img src="images/moodboard1.png" alt="trove moodboard" width="412" height="350">
+      <img src="images/moodboard2.png" alt="trove moodboard" width="412" height="350">
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -99,12 +108,12 @@
          Users said they would like to see where/how to add new templates, and if there are any more ways to move files aside from deleting them.
          Also, a reviewer suggested combining the landing page, pricing into a single page. </p>
       </section>
-    <section>
+    <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="../images/mockup1.png" alt="mockup image" width="300" height="213">
-      <img src="../images/mockup2.png" alt="mockup image" width="300" height="213">
-      <img src="../images/mockup3.png" alt="mockup image" width="300" height="213"><br>
+      <img src="images/mockup1.png" alt="mockup image" width="300" height="213">
+      <img src="images/mockup2.png" alt="mockup image" width="300" height="213">
+      <img src="images/mockup3.png" alt="mockup image" width="300" height="213"><br>
       <a href="" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -114,7 +123,7 @@
     <section>
       <h2>Preference Tests:</h2>
       <p>I conducted a preference test for three different elements in my design.83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
-      <img src="../images/surveygraph.png" alt="preference graph" width="248" height="248">
+      <img src="images/surveygraph.png" alt="preference graph" width="248" height="248">
       </section>
     <!-- final project -->
     <section>
@@ -122,11 +131,13 @@
       <p>Trove is the next step in content storage and organization. Trove presents an opportunity for both casual consumers and businesses to benefit from user-friendly organization, content
           creation and collaboration tools. </p>
       </section>
+    </div>
+
     <!-- connect with me -->
-    <section>
-      <h2>Connect with me:</h2>
-      <p>Thanks for stopping by. Please reach out if you want to chat or have any questions!</p>
-      <a href="" target="_blank" class="button">Message me</a>
+        <section class="connect">
+         <h3>Connect with me:</h3>
+         <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
+         <a href="/contact.html" class="button">Message me</a>
        </section>
     <!-- footer -->
     <footer>
